<resources>
    <string name="app_name">BioPin Status Log</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_the_app">ABOUT THE APP</string>
    <string name="the_creator">THE CREATOR:</string>
    <string name="j_christian_alapad">J. Christian Alapad</string>
    <string name="_4th_year_bscpe_student">4th Year BSCpE Student</string>
    <string name="a_k_a">a.k.a.</string>
    <string name="z3n_manager_hskh_jimi">Z3N_/Manager/HSKH/Jimi</string>
    <string name="create_log">CREATE LOG</string>
    <string name="enter_status">Enter Status</string>
    <string name="enter_device_uptime">Enter Device Uptime</string>
    <string name="enter_log_description">Enter Log Description</string>
    <string name="back">back</string>
    <string name="submit">submit</string>
    <string name="frequently_asked_questions">FREQUENTLY ASKED QUESTIONS</string>
    <string name="who_created_the_app">Who created the App?</string>
    <string name="what_is_the_app_for">What is the App for?</string>
    <string name="the_application_is_made_to_monitor_as_a_companion_to_get_live_data_from_the_orientation_sensor_and_to_create_logs_that_is_used_to_account_instances">The application is made to monitor as a companion to get live data from the orientation sensor and to create logs that is used to account instances.</string>
    <string name="whats_the_command_n_are_we_moving_or_not">WHATS THE COMMAND?\n ARE WE MOVING? OR NOT?</string>
    <string name="api">API</string>
    <string name="log">LOG</string>
    <string name="live_api_update">LIVE API UPDATE</string>
    <string name="biopin_status_report">BIOPIN STATUS REPORT</string>
    <string name="biopin_status_log">BIOPIN STATUS LOG</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">login</string>
    <string name="create_an_account">create an account</string>
    <string name="uptime">UPTIME:</string>
    <string name="status">STATUS:</string>
    <string name="description">DESCRIPTION:</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="update_log">UPDATE LOG</string>
</resources>