<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="40sp"
            android:textStyle="bold"
            android:text="@string/about_the_app"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="80dp"
                android:backgroundTint="@color/blue_munsell"
                app:cardElevation="4dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:layout_marginVertical="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="vertical">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_marginVertical="20dp"
                        app:srcCompat="@drawable/dall_e_image1" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/the_creator"
                        android:textSize="24sp"
                        android:textStyle="bold"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/j_christian_alapad"
                        android:textSize="24sp"
                        android:textStyle="bold"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/_4th_year_bscpe_student"
                        android:textSize="20sp"
                        android:textStyle="italic"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/a_k_a"
                        android:textSize="20sp"
                        android:textStyle="italic"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/z3n_manager_hskh_jimi"
                        android:textSize="12sp"
                        android:textStyle="italic"/>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>